name:                persist-uuid
version:             0.1.0.0
synopsis:            Persistent bindings for the Silk DB
license:             PublicDomain
author:              Adam Bergmark
maintainer:          adam@silkapp.com
build-type:          Simple
cabal-version:       >=1.8

executable persist-uuid
  main-is: Main.hs
  ghc-options: -Wall
  build-depends:
       base
     , bytestring
     , mtl
     , persistent
     , persistent-postgresql
     , persistent-template
     , uuid
